# Quality-Control-System

./: .gitignore  0816.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
scripts/: demo.py  run_demo.py
src/data/: __init__.py  data_generator.py
src/eval/: evaluator.py
src/quality_control/: __init__.py
src/viz/: __init__.py
tests/: test_quality_control.py
